# alertflow

./: .env.example  .gitignore  README.md  compose.override.yml  compose.yml  compose_additions.yml  pyrightconfig.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 62d2159b74ad_create_teams_users_sla_policies_tables.py  dc6db3fc07e0_create_alert_incident_escalation_.py  e0828d776f3a_add_notification_configs_table.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  alerts.py  auth.py  escalation_policies.py  incidents.py  maintenance.py  metrics.py  notifications.py  sla_policies.py  webhooks.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  alert.py  audit_log.py  base.py  enums.py  escalation_policy.py  incident.py  maintenance_window.py  notification_config.py  sla_policy.py  team.py  user.py
backend/app/schemas/: alert.py  auth.py  escalation_policy.py  incident.py  maintenance_window.py  notification_config.py  sla_policy.py
backend/app/services/: alert_service.py  escalation_service.py  incident_service.py  maintenance_service.py  notification_service.py  redis_service.py  sla_service.py
backend/app/workers/: escalation_worker.py  sla_worker.py
backend/tests/: conftest.py  test_auth.py  test_incidents.py
chaos-simulator/: Dockerfile  README.md  main.py  prometheus.yml  pyproject.toml  requirements.txt
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
monitoring/: alertmanager.yml  prometheus.yml  (+2 more)
(+12 files in other folders)
